# nonebot-chatbot

./: .cursorignore  .dockerignore  .gitignore  .publish.sh  Dockerfile  Docker网络问题排查.md  LICENSE  MANIFEST.in  MARKET_COMPATIBILITY.md  MODIFICATIONS.md  PLUGIN_ADD_GUIDE.md  QUICK_START.md  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  start-background.sh  stop-background.sh  test_cli.py  启动项目.bat  启动项目.sh
.codebuddy/commands/: fix-python-env.md
.cursor/rules/: python-venv-config.md
ai-docs/: AGENTS.md
ai-docs/docs/: project-blueprint.md  project-rules.md
config/: config.json
config/suggarchat/: config.toml
config/suggarchat/models/: longcat.json
configs/: bilichat.yaml  config.yaml
docs/: CLI工具使用指南.md  NoneBot市场兼容指南.md  WebSocket配置指南.md  命令使用文档.md  快速添加插件.md  插件开发指南.md  插件未触发排查指南.md  插件管理方式.md  消息日志功能.md
docs/迁移nonebot_plugin_xiuxian_2/: 修仙插件命令列表.md
docs/迁移nonebot_plugin_xiuxian_2/tasks/: README.md
docs/迁移nonebot_plugin_xiuxian_2/tasks/TASK-001-复制插件文件到本地目录/: task.md
docs/迁移nonebot_plugin_xiuxian_2/tasks/TASK-002-验证并修复插件导入路径/: task.md
docs/迁移nonebot_plugin_xiuxian_2/tasks/TASK-003-更新配置文件并验证注册/: task.md
scripts/: complete_copy_xiuxian.py  copy_xiuxian_complete.py  exec_copy_inline.py  execute_migrate_xiuxian.py  final_copy_xiuxian.py  fix_migrated_plugins.py  migrate_all_plugins.py  migrate_all_third_party.py  migrate_xiuxian_2.py  migrate_xiuxian_2_direct.py  quick_migrate.py  run_copy_xiuxian.py  test_detect_plugins.py  test_migrate.py  test_plugin_commands.py  update_xiuxian_equipment_desc_from_xlsx.py
src/: __init__.py
src/adapters/: __init__.py  onebot_v11.py
src/cli/: __init__.py  add_plugin.py
src/database/: __init__.py  connection.py  models.py  plugin_config.py
src/database/migrations/: 001_init_tables.sql
src/plugins/: Untitled  coc.py  hello.py  image.py  jrrp.py  migrate_plugin.py  plugin_config_manager.py  pokemonle_config.py
src/plugins/WWwiki/: __init__.py  activities.py  basicinformation.py  config.py  echo.py  echocard.py  enemy.py  getarchives.py  getmaterial.py  getskll.py  itemlink.py  judgmentrolename.py  recommendation.py  role_list.py  rolearchives.py  rolegift.py  rolematerial.py  roleskll.py  roletale.py  weapon.py  yituliu.py
src/plugins/alconna/: __init__.py
src/plugins/anans_sketchbook/: __init__.py  config.yaml
src/plugins/anans_sketchbook/utils/: config_loader.py  image_fit_paste.py  resource_preloader.py  text_fit_draw.py
src/plugins/bilichat/api/: __init__.py  auth.py  base.py  config.py
src/plugins/bilichat/command/: base.py  functions.py  login.py  otp.py  subs.py
src/plugins/bilichat/model/: subscribe.py
src/plugins/bilichat/request_api/: __init__.py  base.py  local.py
src/plugins/bilichat/subscribe/: fetch_and_push.py  status.py
src/plugins/dorodoro/: __init__.py
src/plugins/epicfree/: __init__.py  config.py  data_source.py  schedule.py
src/plugins/fishing2/: __init__.py  data_source.py
src/plugins/manosaba_memes/: __init__.py  drawer.py
src/plugins/memes_api/matchers/: command.py
src/plugins/mhguesser/: __init__.py  config.py  game.py  render.py
src/plugins/omikuji/: __init__.py  llm_tool.py  models.py  utils.py
src/plugins/pokemonle/: __init__.py  config.py  game.py  render.py
src/plugins/pokemonle/utils/: dataUtils.py  pokeUtils.py
src/plugins/poker/: __init__.py
src/plugins/rollpig/: __init__.py
src/plugins/shindan/: __init__.py  manager.py  model.py  shindanmaker.py
src/plugins/suggarchat/: __init__.py  chatmanager.py  check_rule.py  config.py  matcher_manager.py  preprocess.py
src/plugins/uninfo/: target.py
src/plugins/whateat_pic/: __init__.py
src/plugins/xiuxian_2/: __init__.py
src/services/: event_handler.py  message_handler.py  message_logger.py  plugin_manager.py  status_api.py  status_manager.py  websocket_event_logger.py
src/utils/: command_collector.py  config_loader.py  logger.py  retry.py
tests/: README.md  conftest.py  run_tests.bat  run_tests.sh  test_adapters.py  test_config.py  test_database.py  test_integration.py  test_message_handler.py  test_services.py  test_summary.py  test_utils.py  常见错误修复.md  测试修复说明.md  测试总结.md  错误修复清单.md
(+183 files in other folders)
